# rustful-ts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
crates/algorithm/: Cargo.toml
crates/algorithm/algorithm-api/: Cargo.toml
crates/algorithm/algorithm-api/src/: lib.rs
crates/algorithm/algorithm-core/: Cargo.toml
crates/algorithm/algorithm-core/benches/: performance.rs
crates/algorithm/algorithm-core/examples/: basic.rs
crates/algorithm/algorithm-core/src/: lib.rs
crates/algorithm/algorithm-core/tests/: algorithm_e2e.rs  algorithm_integration.rs  algorithm_test.rs
crates/algorithm/algorithm-facade/: Cargo.toml
crates/algorithm/algorithm-facade/src/: lib.rs
crates/algorithm/algorithm-spi/: Cargo.toml
crates/algorithm/algorithm-spi/src/: lib.rs
crates/algorithm/benches/: performance.rs
crates/algorithm/doc/: overview.md
crates/algorithm/examples/: basic.rs
crates/algorithm/src/: error.rs  lib.rs
crates/algorithm/src/ml/: knn.rs
crates/algorithm/src/regression/: arima.rs  linear.rs
crates/algorithm/src/smoothing/: exponential.rs  mod.rs  moving_average.rs
crates/algorithm/src/utils/: metrics.rs  preprocessing.rs  validation.rs
crates/algorithm/tests/: algorithm_e2e.rs  algorithm_test.rs  integration.rs
crates/anomaly/anomaly-facade/: Cargo.toml
crates/anomaly/anomaly-facade/src/: lib.rs
crates/automl/automl-core/: Cargo.toml
crates/automl/automl-core/src/: ensemble.rs  hyperopt.rs  lib.rs  model_selection.rs
crates/automl/automl-facade/: Cargo.toml
crates/automl/automl-facade/src/: lib.rs
crates/cli/: Cargo.toml  backlog.md
crates/cli/doc/: overview.md
crates/cli/src/: main.rs
crates/data/: Cargo.toml
crates/data/data-api/: Cargo.toml
crates/data/data-api/src/: config.rs  lib.rs
crates/data/data-core/: Cargo.toml
crates/data/data-core/src/: lib.rs  yahoo.rs
crates/data/data-facade/: Cargo.toml
crates/data/data-facade/src/: lib.rs
crates/data/data-spi/: Cargo.toml
crates/data/data-spi/src/: lib.rs
crates/data/doc/: overview.md
crates/data/examples/: basic.rs
crates/data/src/: lib.rs  yahoo.rs
crates/data/tests/: data_e2e.rs  data_integration.rs  data_test.rs
crates/detector/detector-api/: Cargo.toml
crates/detector/detector-api/benches/: performance.rs
crates/detector/detector-api/src/: iqr.rs  lib.rs  zscore.rs
crates/detector/detector-core/: Cargo.toml
crates/detector/detector-core/src/: lib.rs
crates/financial/: Cargo.toml
crates/financial/doc/: overview.md
crates/financial/examples/: basic.rs
crates/financial/financial-api/: Cargo.toml
crates/financial/financial-api/src/: config.rs  lib.rs
crates/financial/financial-core/: Cargo.toml
crates/financial/financial-core/src/: backtesting.rs  lib.rs  portfolio.rs  risk.rs  signals.rs
crates/financial/financial-facade/: Cargo.toml
crates/financial/financial-facade/src/: lib.rs
crates/financial/financial-spi/: Cargo.toml
crates/financial/financial-spi/src/: lib.rs
crates/financial/src/: backtesting.rs  lib.rs  portfolio.rs  risk.rs
crates/financial/tests/: financial_e2e.rs  financial_integration.rs
crates/forecast/: Cargo.toml
crates/forecast/doc/: overview.md
crates/forecast/examples/: basic.rs
crates/forecast/forecast-api/: Cargo.toml
crates/forecast/forecast-api/src/: lib.rs
crates/forecast/forecast-core/: Cargo.toml
crates/forecast/forecast-core/src/: confidence.rs  decomposition.rs  lib.rs  pipeline.rs  seasonality.rs
crates/forecast/forecast-facade/: Cargo.toml
crates/forecast/forecast-facade/examples/: basic.rs
crates/forecast/forecast-facade/src/: lib.rs
crates/forecast/forecast-facade/tests/: forecast_e2e.rs  forecast_integration.rs  forecast_test.rs
crates/forecast/forecast-spi/: Cargo.toml
crates/forecast/forecast-spi/src/: lib.rs
crates/forecast/src/: confidence.rs  lib.rs  pipeline.rs  seasonality.rs
crates/forecast/tests/: forecast_e2e.rs  forecast_integration.rs  forecast_test.rs
crates/rustful-anomaly/: Cargo.toml
crates/rustful-anomaly/doc/: overview.md
crates/rustful-anomaly/examples/: basic.rs
crates/rustful-anomaly/src/: detectors.rs  lib.rs  monitoring.rs
crates/rustful-anomaly/tests/: integration.rs
crates/rustful-automl/: Cargo.toml
crates/rustful-automl/doc/: overview.md
crates/rustful-automl/examples/: basic.rs
crates/rustful-automl/src/: ensemble.rs  hyperopt.rs  model_selection.rs
crates/rustful-automl/tests/: integration.rs
crates/rustful-cli/: Cargo.toml
crates/rustful-cli/doc/: overview.md
crates/rustful-cli/src/: main.rs
crates/rustful-core/: Cargo.toml
crates/rustful-core/doc/: overview.md
crates/rustful-core/examples/: basic.rs
crates/rustful-core/src/: lib.rs
crates/rustful-core/src/algorithms/: arima.rs  exponential_smoothing.rs  knn.rs  linear_regression.rs  mod.rs  moving_average.rs
crates/rustful-core/tests/: integration.rs  yahoo_integration.rs
crates/rustful-financial/: Cargo.toml
crates/rustful-financial/doc/: overview.md
crates/rustful-financial/examples/: basic.rs
crates/rustful-financial/src/: risk.rs  signals.rs
crates/rustful-financial/tests/: integration.rs
crates/rustful-forecast/: Cargo.toml
crates/rustful-forecast/doc/: overview.md
crates/rustful-forecast/examples/: basic.rs
crates/rustful-forecast/src/: confidence.rs  decomposition.rs  lib.rs  pipeline.rs
crates/rustful-forecast/tests/: integration.rs
crates/rustful-server/: Cargo.toml
crates/rustful-server/doc/: overview.md
crates/rustful-server/src/: main.rs  routes.rs
crates/rustful-wasm/: Cargo.toml
crates/rustful-wasm/doc/: overview.md
crates/rustful-wasm/src/: lib.rs
crates/server/: .env.example  Cargo.toml
crates/server/doc/: overview.md
crates/server/src/: main.rs  routes.rs
crates/ts-ffi/: Cargo.toml
crates/ts-ffi/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/doc/: overview.md
crates/tui/src/: app.rs  event.rs  main.rs
crates/wasm/: Cargo.toml
crates/wasm/doc/: overview.md
crates/wasm/src/: lib.rs
(+1049 files in other folders)
