[workspace]
resolver = "2"
members = [
    "crates/algorithm",
    "crates/data",
    "crates/rustful-financial",
    "crates/rustful-automl",
    "crates/rustful-forecast",
    "crates/rustful-anomaly",
    "crates/rustful-wasm",
    "crates/rustful-server",
    "crates/rustful-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/rustful-ts"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
ndarray = "0.15"
thiserror = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

# Python dependencies
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# HTTP/Async
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
algorithm = { path = "crates/algorithm" }
data = { path = "crates/data" }
rustful-financial = { path = "crates/rustful-financial" }
rustful-automl = { path = "crates/rustful-automl" }
rustful-forecast = { path = "crates/rustful-forecast" }
rustful-anomaly = { path = "crates/rustful-anomaly" }

[profile.release]
opt-level = 3
lto = true
