[workspace]
resolver = "2"
members = [
    # Predictor domain
    "crates/predictor/predictor-spi",
    "crates/predictor/predictor-core",
    "crates/predictor/predictor-api",
    "crates/predictor/predictor-facade",
    # Detector domain
    "crates/detector/detector-spi",
    "crates/detector/detector-core",
    "crates/detector/detector-api",
    "crates/detector/detector-facade",
    # Pipeline domain
    "crates/pipeline/pipeline-spi",
    "crates/pipeline/pipeline-core",
    "crates/pipeline/pipeline-api",
    "crates/pipeline/pipeline-facade",
    # Signal domain
    "crates/signal/signal-spi",
    "crates/signal/signal-core",
    "crates/signal/signal-api",
    "crates/signal/signal-facade",
    # Utilities
    "crates/bench-harness",
    # Legacy (to be migrated)
    "crates/algorithm",
    "crates/data",
    "crates/financial",
    "crates/automl",
    "crates/forecast",
    "crates/anomaly",
    "crates/wasm",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/rustful-ts"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
ndarray = "0.15"
thiserror = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

# Python dependencies
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# HTTP/Async
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates - Predictor domain
predictor-spi = { path = "crates/predictor/predictor-spi" }
predictor-core = { path = "crates/predictor/predictor-core" }
predictor-api = { path = "crates/predictor/predictor-api" }
predictor-facade = { path = "crates/predictor/predictor-facade" }

# Internal crates - Detector domain
detector-spi = { path = "crates/detector/detector-spi" }
detector-core = { path = "crates/detector/detector-core" }
detector-api = { path = "crates/detector/detector-api" }
detector-facade = { path = "crates/detector/detector-facade" }

# Internal crates - Pipeline domain
pipeline-spi = { path = "crates/pipeline/pipeline-spi" }
pipeline-core = { path = "crates/pipeline/pipeline-core" }
pipeline-api = { path = "crates/pipeline/pipeline-api" }
pipeline-facade = { path = "crates/pipeline/pipeline-facade" }

# Internal crates - Signal domain
signal-spi = { path = "crates/signal/signal-spi" }
signal-core = { path = "crates/signal/signal-core" }
signal-api = { path = "crates/signal/signal-api" }
signal-facade = { path = "crates/signal/signal-facade" }

# Internal crates - Utilities
bench-harness = { path = "crates/bench-harness" }

# Rustboot framework (infrastructure) - local path for development
rustboot-health = { path = "../rustboot/crates/rustboot-health", package = "dev-engineeringlabs-rustboot-health" }
rustboot-middleware = { path = "../rustboot/crates/rustboot-middleware", package = "dev-engineeringlabs-rustboot-middleware" }
rustboot-error = { path = "../rustboot/crates/rustboot-error" }

# Internal crates - Legacy (to be migrated)
algorithm = { path = "crates/algorithm" }
data = { path = "crates/data" }
financial = { path = "crates/financial" }
automl = { path = "crates/automl" }
forecast = { path = "crates/forecast" }
anomaly = { path = "crates/anomaly" }

[profile.release]
opt-level = 3
lto = true
