[workspace]
resolver = "2"
members = [
    # Predictor domain
    "crates/predictor/predictor-spi",
    "crates/predictor/predictor-core",
    "crates/predictor/predictor-api",
    "crates/predictor/predictor-facade",
    # Detector domain
    "crates/detector/detector-spi",
    "crates/detector/detector-core",
    "crates/detector/detector-api",
    "crates/detector/detector-facade",
    # Pipeline domain
    "crates/pipeline/pipeline-spi",
    "crates/pipeline/pipeline-core",
    "crates/pipeline/pipeline-api",
    "crates/pipeline/pipeline-facade",
    # Signal domain
    "crates/signal/signal-spi",
    "crates/signal/signal-core",
    "crates/signal/signal-api",
    "crates/signal/signal-facade",
    # Indicator domain (migrated from quantlang)
    "crates/indicator/indicator-spi",
    "crates/indicator/indicator-api",
    "crates/indicator/indicator-core",
    "crates/indicator/indicator-facade",
    # Optimizer domain (merged from tuning + indicator-optimizer)
    "crates/optimizer/optimizer-spi",
    "crates/optimizer/optimizer-api",
    "crates/optimizer/optimizer-core",
    "crates/optimizer/optimizer-facade",
    # Anomaly domain
    "crates/anomaly/anomaly-spi",
    "crates/anomaly/anomaly-api",
    "crates/anomaly/anomaly-core",
    "crates/anomaly/anomaly-facade",
    # Financial domain
    "crates/financial/financial-spi",
    "crates/financial/financial-api",
    "crates/financial/financial-core",
    "crates/financial/financial-facade",
    # Data domain
    "crates/data/data-spi",
    "crates/data/data-api",
    "crates/data/data-core",
    "crates/data/data-facade",
    # FFI bindings
    "crates/ts-ffi",
    # Utilities moved to rustboot: bench, loc
    # AutoML domain
    "crates/automl/automl-spi",
    "crates/automl/automl-api",
    "crates/automl/automl-core",
    "crates/automl/automl-facade",
    # Algorithm domain
    "crates/algorithm/algorithm-spi",
    "crates/algorithm/algorithm-api",
    "crates/algorithm/algorithm-core",
    "crates/algorithm/algorithm-facade",
    # Forecast domain
    "crates/forecast/forecast-spi",
    "crates/forecast/forecast-api",
    "crates/forecast/forecast-core",
    "crates/forecast/forecast-facade",
    "crates/wasm",
    "crates/server",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/rustful-ts"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
ndarray = "0.15"
thiserror = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

# Python dependencies
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# HTTP/Async
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"

# Internal crates - Predictor domain
predictor-spi = { path = "crates/predictor/predictor-spi" }
predictor-core = { path = "crates/predictor/predictor-core" }
predictor-api = { path = "crates/predictor/predictor-api" }
predictor-facade = { path = "crates/predictor/predictor-facade" }

# Internal crates - Detector domain
detector-spi = { path = "crates/detector/detector-spi" }
detector-core = { path = "crates/detector/detector-core" }
detector-api = { path = "crates/detector/detector-api" }
detector-facade = { path = "crates/detector/detector-facade" }

# Internal crates - Pipeline domain
pipeline-spi = { path = "crates/pipeline/pipeline-spi" }
pipeline-core = { path = "crates/pipeline/pipeline-core" }
pipeline-api = { path = "crates/pipeline/pipeline-api" }
pipeline-facade = { path = "crates/pipeline/pipeline-facade" }

# Internal crates - Signal domain
signal-spi = { path = "crates/signal/signal-spi" }
signal-core = { path = "crates/signal/signal-core" }
signal-api = { path = "crates/signal/signal-api" }
signal-facade = { path = "crates/signal/signal-facade" }

# Internal crates - Indicator domain
indicator-spi = { path = "crates/indicator/indicator-spi" }
indicator-api = { path = "crates/indicator/indicator-api" }
indicator-core = { path = "crates/indicator/indicator-core" }
indicator-facade = { path = "crates/indicator/indicator-facade" }

# Internal crates - Optimizer domain
optimizer-spi = { path = "crates/optimizer/optimizer-spi" }
optimizer-api = { path = "crates/optimizer/optimizer-api" }
optimizer-core = { path = "crates/optimizer/optimizer-core" }
optimizer-facade = { path = "crates/optimizer/optimizer-facade" }

# Rustboot framework (infrastructure) - local path for development
rustboot-config = { path = "../langboot/rustboot/crates/rustboot-config", package = "dev-engineeringlabs-rustboot-config" }
rustboot-health = { path = "../langboot/rustboot/crates/rustboot-health", package = "dev-engineeringlabs-rustboot-health" }
rustboot-middleware = { path = "../langboot/rustboot/crates/rustboot-middleware", package = "dev-engineeringlabs-rustboot-middleware" }
rustboot-error = { path = "../langboot/rustboot/crates/rustboot-error" }
bench = { path = "../langboot/rustboot/crates/swe-doctor/bench" }
loc-core = { path = "../langboot/rustboot/crates/swe-doctor/loc/loc-core" }
load = { path = "../langboot/rustboot/crates/swe-doctor/load" }
mem = { path = "../langboot/rustboot/crates/swe-doctor/mem" }
prof = { path = "../langboot/rustboot/crates/swe-doctor/prof" }

# Internal crates - Anomaly domain
anomaly-spi = { path = "crates/anomaly/anomaly-spi" }
anomaly-api = { path = "crates/anomaly/anomaly-api" }
anomaly-core = { path = "crates/anomaly/anomaly-core" }
anomaly-facade = { path = "crates/anomaly/anomaly-facade" }

# Internal crates - Financial domain
financial-spi = { path = "crates/financial/financial-spi" }
financial-api = { path = "crates/financial/financial-api" }
financial-core = { path = "crates/financial/financial-core" }
financial-facade = { path = "crates/financial/financial-facade" }
financial = { path = "crates/financial/financial-facade", package = "financial-facade" }

# Internal crates - Data domain
data-spi = { path = "crates/data/data-spi" }
data-api = { path = "crates/data/data-api" }
data-core = { path = "crates/data/data-core" }
data-facade = { path = "crates/data/data-facade" }

# Internal crates - AutoML domain
automl-spi = { path = "crates/automl/automl-spi" }
automl-api = { path = "crates/automl/automl-api" }
automl-core = { path = "crates/automl/automl-core" }
automl-facade = { path = "crates/automl/automl-facade" }
automl = { path = "crates/automl/automl-facade", package = "automl-facade" }

# Internal crates - Forecast domain
forecast-spi = { path = "crates/forecast/forecast-spi" }
forecast-api = { path = "crates/forecast/forecast-api" }
forecast-core = { path = "crates/forecast/forecast-core" }
forecast-facade = { path = "crates/forecast/forecast-facade" }
forecast = { path = "crates/forecast/forecast-facade", package = "forecast-facade" }

# Internal crates - Algorithm domain
algorithm-spi = { path = "crates/algorithm/algorithm-spi" }
algorithm-api = { path = "crates/algorithm/algorithm-api" }
algorithm-core = { path = "crates/algorithm/algorithm-core" }
algorithm-facade = { path = "crates/algorithm/algorithm-facade" }
algorithm = { path = "crates/algorithm/algorithm-facade", package = "algorithm-facade" }

[profile.release]
opt-level = 3
lto = true
