[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustful-ts"
version = "0.1.0"
description = "High-performance time series prediction algorithms powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["time-series", "forecasting", "prediction", "arima", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rustful-ts"
Documentation = "https://github.com/yourusername/rustful-ts/tree/main/docs"
Repository = "https://github.com/yourusername/rustful-ts"

[tool.maturin]
features = ["python"]
python-source = "py"
module-name = "rustful_ts._rustful_ts"
