[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for rustful-ts time series library"

[[bin]]
name = "rustful"
path = "src/main.rs"

[dependencies]
algorithm = { workspace = true }
forecast = { workspace = true }
financial = { workspace = true }
automl = { workspace = true }
anomaly-facade = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
csv = "1.3"
