[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Data fetching utilities for time series analysis"
keywords = ["time-series", "data", "yahoo-finance", "stocks"]
categories = ["web-programming", "finance"]

[lib]
name = "data"
crate-type = ["rlib"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
