[package]
name = "financial"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Financial analytics for time series: portfolio, backtesting, risk metrics"

[dependencies]
algorithm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
