[package]
name = "rustful-anomaly"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anomaly detection for time series: detectors, monitoring, alerting"

[dependencies]
algorithm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
