[package]
name = "rustful-forecast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forecasting pipelines: decomposition, seasonality detection, confidence intervals"

[dependencies]
rustful-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
