[package]
name = "rustful-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for rustful-ts time series library"

[[bin]]
name = "rustful-server"
path = "src/main.rs"

[dependencies]
algorithm = { workspace = true }
rustful-forecast = { path = "../rustful-forecast" }
rustful-financial = { path = "../rustful-financial" }
rustful-automl = { path = "../rustful-automl" }
rustful-anomaly = { path = "../rustful-anomaly" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
