[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for rustful-ts time series library"

[[bin]]
name = "rustful-server"
path = "src/main.rs"

[dependencies]
algorithm = { workspace = true }
forecast = { path = "../forecast" }
financial = { path = "../financial" }
automl = { path = "../automl" }
anomaly = { path = "../anomaly" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Rustboot infrastructure
rustboot-health = { workspace = true }
rustboot-middleware = { workspace = true }
rustboot-error = { workspace = true }
