[package]
name = "ts-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI bindings for rustful-ts time series library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
optimizer-core = { path = "../optimizer/optimizer-core" }
