[package]
name = "automl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core implementations for AutoML: ensemble, hyperopt, model selection"

[dependencies]
automl-spi = { path = "../automl-spi" }
automl-api = { path = "../automl-api" }
predictor-facade = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
