[package]
name = "data-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data source Core - implementations (Yahoo Finance)"

[features]
default = ["fetch"]
fetch = ["reqwest", "tokio"]

[dependencies]
data-spi = { path = "../data-spi" }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
